fixed spacing of page headers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -223,11 +223,6 @@ a {
 
 @media (max-width: 768px) {
 
-  .hero-section {
-    padding: 4rem 1.5rem;
-    font-family: 'Inter', sans-serif; 
-  }
-
   .hero-description {
     display: grid;
     grid-template-columns: 1fr;
@@ -489,7 +484,7 @@ a {
   text-align: left;
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 1.5rem;
 }
 
 .section-label {
@@ -747,7 +742,7 @@ a {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 1.5rem;
 }
 
 .portfolio-full-label {
@@ -1009,7 +1004,7 @@ a {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 1.5rem;
 }
 
 .services-full-label {
@@ -1193,7 +1188,7 @@ a {
 .packages-full-section {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
   margin-top: 4rem;
 }
 
@@ -1242,7 +1237,7 @@ a {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 2.5rem;
+  gap: 1.5rem;
 }
 
 .contact-page-label {
@@ -1705,4 +1700,18 @@ a {
 
 *::-webkit-scrollbar-corner {
   background: var(--light-gray);
+}
+
+/* Media Query For Page Margins */
+
+@media (max-width: 800px) {
+  .services-full-section,
+  .portfolio-full-section,
+  .contact-page-section,
+  .hero-section,
+  .services-section,
+  .about-section,
+  .contact-section {
+    padding: 4rem 1rem;
+  }
 }
